@@ -27,6 +27,7 @@ Version CVS HEAD (?)
     added, removed or renamed
   * fixed name entry field in instrument properties window
   * use character encoding Windows-1252 for all strings in gig files
+  * show dimension zone start and end as numeric text labels
 
 Version 0.2.0 (2009-07-31)
 
